2007-10-26	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Merge binding updates from CVS head. Bindings
	should now be reasonably in sync with C Classic API.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb: Fix warnings.

2007-04-02	Jennifer Averett <jennifer.averrett@oarcorp.com>

	* rtems.adb, rtems.ads: Update.

2005-05-23	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb: Fix variable name.

2005-05-23	Joel Sherrill <joel@OARcorp.com>

	PR rtems_misc/795
	* rtems.ads: Fix parameter ordering.

2005-05-03	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb: Remove gcc 4.x warnings.

2005-05-02	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 782/rtems
	* rtems.ads: Remove stray ';'.
	* rtems.adb: Stub Task_Variable_Add, Task_Variable_Get,
	Task_Variable_Delete.

2005-04-30	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Use preinstall.am
	* preinstall.am: New.

2004-01-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add PREINSTALL_DIRS.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Move include_adadir into RTEMS_ADA condional block.
	Add CLEANFILES. Add PREINSTALL_FILES to CLEANFILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use include_ada_HEADERS.

2003-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Preinstall adainclude_HEADERS.
	Add $(dirstamp) to preinstallation rules.

2003-11-25	Joel Sherrill <joel@OARcorp.com>

	PR 528/rtems_misc
	* rtems.ads: Add task variables to Ada binding.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* rtems-multiprocessing.adb, rtems-multiprocessing.ads, rtems.adb,
	rtems.ads: URL for license changed.

2003-07-08	Joel Sherrill <joel@OARcorp.com>

	PR 418/ada
	* rtems.adb: Add missing all keyword to derefence pointer.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
