@@ -1,3 +1,7 @@
+2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>
+
+	* rtems.adb, rtems.ads: Fixed errors in the barrier binding.
+
 2007-10-26	Glenn Humphrey <glenn.humphrey@OARcorp.com>
 
 	* rtems.adb, rtems.ads: Merge binding updates from CVS head. Bindings
